# cloudflare-ddns

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: build.yml  publish.yml  publish_release.yml  release.yml
src/: file.rs  main.rs  network.rs
