[package]
name = "cloudflare-ddns"
version = "0.2.0"
authors = ["Rostislav Raykov <z@zbrox.org>"]
edition = "2018"
description = "A simple CLI tool to use Cloudflare's free DDNS service"
repository = "https://github.com/zbrox/cloudflare-ddns"
homepage = "https://github.com/zbrox/cloudflare-ddns"
keywords = ["cloudflare", "ddns", "cli"]
categories = ["command-line-utilities"]
license = "MIT"
documentation = "https://github.com/zbrox/cloudflare-ddns"
readme = "README.md"

[dependencies]
quicli = "0.4"
structopt = "0.3.12"
reqwest= { version = "0.10.4", features = ["blocking", "json"] }
serde = "1.0.105"
serde_json = "1.0.48"
exitcode = "1.1.2"
failure = "0.1.7"
toml = "0.5.6"
human-panic = "1.0.2"
serde_derive = "1.0.105"
